# bitflags

./: README.md  README.rst  pyproject.toml  setup.py
bitflags/: __init__.py  __meta__.py  bitflags.py  flag_bits.py  utils.py
tests/: BitManipulation_example.py  check_parsing.py  check_sizes.py  metaclass_tests.py  test_BitFlags.py  test_dynamic_bitflags.py  test_gh_issue_2.py  test_gh_issue_3.py  test_utils.py
